# tower

./: .prettierrc  Justfile  LICENSE  README.md  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  clients.rs  formatter.rs  lib.rs  message.rs  results.rs  server.rs
src/app/: Chat.tsx  Main.tsx  globals.css  layout.tsx  page.tsx
src/components/: BadMessageSection.tsx  DisconnectDialog.tsx  MessageList.tsx  MessageSection.tsx  Toasts.tsx
src/hooks/: useScrollToBottom.tsx
src/lib/constants/: version.ts
src/lib/enums/: appstate.ts
src/lib/types/: message.types.ts  response.types.ts
