[package]
name = "tower"
version = "1.0.0-rc1"
description = "A modern desktop client for RAC v2 built with Tauri."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
license = "MIT"
repository = "https://github.com/kostya-zero/tower"
homepage = "https://github.com/kostya-zero/tower"
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rac = { version = "0.1.0", package = "rac_rs", features = ["async_client", "async_wrac"], default-features = false }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
regex = "1.11.1"
lazy_static = "1.5.0"
tokio = { version = "1.45.1", features = ["full"] }
